--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ocirebla77/crud_node_js#readme",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
